fix 2 buttons on mobile

--- a/main.css
+++ b/main.css
@@ -96,6 +96,7 @@ body {
 .big-tile {
   width: 100%;
   font-size: 1em;
+  height:
 }
 
 .big-tile-content {
@@ -107,12 +108,13 @@ body {
 
 .button {
   position: absolute;
-  bottom: 40px;
+  top: 120px;
 
   display: inline;
   width: auto;
   height: 20px;
 
+  margin-top: 10px;
   padding: 0 20px 5px 20px;
   border: 3px solid white;
   font-size: 1.3em;
@@ -191,6 +193,10 @@ body {
 
   .main-pic-frame {
     height: 100vh;
+  }
+
+  .button {
+    bottom: 40px;
   }
 }
 
